@@ -66,11 +66,11 @@ public class AllocatedJudgeService {
                 allocatedJudgeBuilder.isSpecificJudgeOrLegalAdviserNeeded(YesOrNo.Yes);
                 allocatedJudgeBuilder.isJudgeOrLegalAdviser((AllocatedJudgeTypeEnum.judge));
                 if (null != judgeDetails && !judgeDetails.isEmpty()) {
-                    allocatedJudgeBuilder.judgeName(judgeDetails.get(0).getSurname());
-                    allocatedJudgeBuilder.judgeEmail(judgeDetails.get(0).getEmailId());
+                    allocatedJudgeBuilder.judgeName(judgeDetails.getFirst().getSurname());
+                    allocatedJudgeBuilder.judgeEmail(judgeDetails.getFirst().getEmailId());
                     allocatedJudgeBuilder.judgePersonalCode(judgePersonalCode[0]);
-                    allocatedJudgeBuilder.tierOfJudge(CollectionUtils.isNotEmpty(judgeDetails.get(0).getAppointments())
-                                                          ? judgeDetails.get(0).getAppointments().get(0).getAppointment()
+                    allocatedJudgeBuilder.tierOfJudge(CollectionUtils.isNotEmpty(judgeDetails.getFirst().getAppointments())
+                                                          ? judgeDetails.getFirst().getAppointments().getFirst().getAppointment()
                                                           : null);
                 }
             } else if (null != legalAdviserList && null != legalAdviserList.getValue()) {
